# zmk-config

./: CMakeLists.txt  build.yaml
boards/arm/nice_nano/: nice_nano.dtsi
boards/shields/corne/: corne.dtsi  corne.keymap  corne.zmk.yml  corne_right.overlay
boards/shields/corne/boards/: nice_nano_v2.overlay
config/: CMakeLists.txt  Kconfig  corne.conf  corne.dtsi  corne.keymap  corne_left.overlay  corne_right.conf  corne_right.overlay  pimtrackball.conf  west.yml
config/boards/arm/nice_nano/: CMakeLists.txt  nice_nano_v2.dts
config/boards/shields/corne/: corne.dts  corne.zmk.yml
config/boards/shields/corne/boards/: nice_nano_v2.overlay
